# coreml-rs

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
.claude-flow/metrics/: codebase-map.json  consolidation.json  learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude-flow/swarm/: swarm-state.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.swarm/: memory.db  schema.sql  state.json
_bmad-output/: epics-and-stories.md  prd-coreml-crate.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: research-native-rust-coreml.md
examples/: inspect_model.rs  load_and_predict.rs
scripts/: create_multi_io_model.py  create_test_model.py
src/: async_bridge.rs  batch.rs  compile.rs  compute.rs  description.rs  error.rs  ffi.rs  lib.rs  model_async.rs  model_lifecycle.rs  ndarray_support.rs  state.rs  tensor.rs
tests/: integration_test.rs
tests/fixtures/test_linear.mlmodelc/: metadata.json  model.mil
tests/fixtures/test_multi_io.mlmodelc/: metadata.json  model.mil
